<resources>
	<string name="app_name">Papax</string>
	<string name="title_activity_maps">Map</string>
	<string name="email">email</string>
	<string name="phone_gen">phone</string>
	<string name="login">Log In</string>
	<string name="password">password</string>
	<string name="log_in">Log in</string>
	<string name="sign_up">Sign up</string>
	<string name="or">or</string>
	<string name="register">Register</string>
	<string name="privacy_policy">Privacy policy</string>
	<string name="car_info">Car info</string>
	<string name="start_carpool">Start Carpool</string>
	<string name="name">Name</string>
	<string name="add_regular_address">Add regular address</string>
	<string name="phone">Phone</string>
	<string name="picsart">Picsart</string>
	<string name="required_text">All fields are required</string>
	<string name="something_is_wrong">Something is wrong</string>
	<string name="driver">Driver</string>
	<string name="passenger">Passenger</string>
	<string name="edit">Edit</string>
	<string name="i_am">I am</string>
	<string name="no_picsart_employee">You must be Picsart employee</string>
</resources>
