<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/login_background_img"
	android:fillViewport="true">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.v7.widget.AppCompatImageView
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:layout_marginStart="78dp"
			android:src="@drawable/cam"
			app:layout_constraintBottom_toBottomOf="@+id/user_photo"
			app:layout_constraintStart_toStartOf="@+id/user_photo"
			app:layout_constraintTop_toTopOf="@+id/user_photo" />

		<com.facebook.drawee.view.SimpleDraweeView
			android:id="@+id/user_photo"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginTop="40dp"
			app:actualImageResource="@color/colorPrimaryDark"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:roundAsCircle="true"
			app:roundingBorderColor="@android:color/white"
			app:roundingBorderWidth="2dp" />

		<android.support.constraint.ConstraintLayout
			android:id="@+id/auth_container"
			android:layout_width="325dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="56dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="44dp"
			android:background="@drawable/input_fields_background_white_container"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/user_photo">

			<EditText
				android:id="@+id/user_email"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="32dp"
				android:drawablePadding="24dp"
				android:drawableStart="@android:drawable/ic_partial_secure"
				android:hint="@string/name"
				android:inputType="textEmailAddress"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<android.support.v7.widget.AppCompatTextView
				android:id="@+id/add_location"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:drawableTop="@drawable/ic_add"
				android:text="@string/add_regular_address"
				android:textAlignment="center"
				android:textSize="14sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/user_email" />

			<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:fontFamily="sans-serif-medium"
				android:text="@string/car_info"
				android:textColor="@color/login_txt_color"
				android:textSize="18sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/add_location" />

			<EditText
				android:id="@+id/car_info_1"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:drawablePadding="24dp"
				android:drawableStart="@android:drawable/ic_partial_secure"
				android:inputType="textPassword"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView" />

			<EditText
				android:id="@+id/car_info_2"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:drawablePadding="24dp"
				android:drawableStart="@android:drawable/ic_partial_secure"
				android:inputType="textPassword"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/car_info_1" />


			<EditText
				android:id="@+id/car_info_3"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:drawablePadding="24dp"
				android:drawableStart="@android:drawable/ic_partial_secure"
				android:inputType="textPassword"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/car_info_2" />


			<EditText
				android:id="@+id/car_info_4"
				style="@style/EditTextStyle"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:drawablePadding="24dp"
				android:drawableStart="@android:drawable/ic_partial_secure"
				android:inputType="textPassword"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/car_info_3" />

			<android.support.v7.widget.AppCompatButton
				android:id="@+id/start_carpool_btn"
				style="@style/DarkCapsuleButtonStyle"
				android:layout_marginBottom="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:enabled="false"
				android:text="@string/start_carpool"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/car_info_4" />

		</android.support.constraint.ConstraintLayout>

	</android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>